--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
   "dependencies": {
     "@mobily/ts-belt": "^3.13.1",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/react-slider": "^1.3.6",
     "deepmerge-ts": "^5.1.0",
     "embla-carousel-react": "^8.4.0",
     "focus-trap-react": "^10.3.1",
@@ -64,6 +66,7 @@
     "react-hotkeys-hook": "^4.6.1",
     "react-merge-refs": "^2.1.1",
     "react-remove-scroll": "^2.6.0",
+    "react-slider": "^2.0.6",
     "react-use-measure": "^2.1.1",
     "react-zoom-pan-pinch": "^3.6.1",
     "screenfull": "^6.0.2",
